Fixed tile size bug, removed app frame to fix several bugs and added redirect from revoke_certificate.jsp after revokation, adjusted table style of intranet

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#">Urlaubsbeantragung</a></li>
                 <li><a href="timemanager/zeiterfassung.php">Zeiterfassung</a></li>
                 <li class="divider"></li>
-                <li><a href="certificates/app_frame.jsp">Zertifikatsverwaltung</a></li>
+                <li><a href="certificates/home.jsp">Zertifikatsverwaltung</a></li>
                 <li class="divider"></li>
                 <li><a href="#">Fahrtenbücher</a></li>
               </ul>
